--- a/postscriptum/gwt/src/main/java/it/mate/postscriptum/client/constants/AppProperties.properties
+++ b/postscriptum/gwt/src/main/java/it/mate/postscriptum/client/constants/AppProperties.properties
@@ -3,6 +3,10 @@ phoneAppName=Post Scriptum
 
 tabletAppName=Post Scriptum
 
-versionCredits=Version 1.2.0 - Developed by MDM
+//version=Version 1.2.0 - Developed by MDM
+
+version=1.3.0
+
+credits=Developed by MDM
 
 extendedVersion=false
