--- a/trunk/postscriptum/android/AndroidManifest.xml
+++ b/trunk/postscriptum/android/AndroidManifest.xml
@@ -20,9 +20,13 @@
   <uses-sdk
       android:minSdkVersion="13"
       android:targetSdkVersion="19" />
-        
-  <application 
+
+  <!-- 
     android:debuggable="false" 
+   -->     
+        
+  <application
+    android:allowBackup="true"
     android:hardwareAccelerated="false" 
     android:icon="@drawable/icon" 
     android:label="@string/app_name" >
@@ -45,5 +49,11 @@
       </intent-filter>
     </activity>
   </application>
+  
+  <uses-permission android:name="android.permission.READ_CONTACTS" />
+  <!-- 
+  <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+   -->
+  <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
 </manifest>
