--- a/trunk/protoph/server/pom.xml
+++ b/trunk/protoph/server/pom.xml
@@ -9,23 +9,10 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <appengine.target.version>1.9.6</appengine.target.version>
+    <appengine.target.version>1.9.15</appengine.target.version>
     <spring.version>3.2.4.RELEASE</spring.version>
     <log4j.version>1.2.14</log4j.version>
   </properties>
-
-  <repositories>
-
-    <!-- IMPORTANTE: serve per escludere il repo melograno!!! -->
-
-    <!--     
-    <repository>
-      <id>repo1</id>
-      <url>http://repo1.maven.org/maven2</url>
-    </repository>
-     -->
-
-  </repositories>
 
   <dependencies>
 
@@ -88,6 +75,7 @@
 
     <plugins>
 
+      <!-- ENDPOINT PACKAGING SKIPPED
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
@@ -96,9 +84,7 @@
           <webXml>${project.build.directory}/generated-sources/appengine-endpoints/WEB-INF/web.xml</webXml>
           <webResources>
             <resource>
-              <!-- this is relative to the pom.xml directory -->
               <directory>${project.build.directory}/generated-sources/appengine-endpoints</directory>
-              <!-- the list has a default value of ** -->
               <includes>
                 <include>WEB-INF/*.discovery</include>
                 <include>WEB-INF/*.api</include>
@@ -107,6 +93,7 @@
           </webResources>
         </configuration>
       </plugin>
+       -->
 
       <plugin>
         <groupId>com.google.appengine</groupId>
