--- a/trunk/postscriptum/gwt/src/main/java/it/mate/postscriptum/client/constants/AppProperties.properties
+++ b/trunk/postscriptum/gwt/src/main/java/it/mate/postscriptum/client/constants/AppProperties.properties
@@ -3,8 +3,13 @@ phoneAppName=Post Scriptum
 
 tabletAppName=Post Scriptum
 
-version=1.3.1
+//version=1.3.1
+version=1.4.0
 
 credits=Developed by MDM
 
 extendedVersion=false
+
+//clientType=F1
+clientType=P1
+
