--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages.properties
@@ -119,3 +119,13 @@ AccountEditView_flushAndSaveAccount_msg1=You must enter your name
 
 CheckSomministrazioniScaduteTask_run_msg1=There is an expired administration, but data connection is not available now. Try to re-activate it before registering the intake of medication.
 
+PatientEditView_onClosingView_msg1=There are some changes. Do you want to save it?
+
+PatientEditView_flushModel_msg1=Missing name
+
+PatientEditView_flushModel_msg2=Missing email or phone number
+
+PatientEditView_onDeleteBtn_msg1=Are you sure you want to delete this patient?
+
+PatientListView_showListaPazienti_msg1=You have no saved patients.
+
