--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppProperties.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppProperties.properties
@@ -3,7 +3,7 @@ phoneAppName=Therapy Reminder
 
 tabletAppName=Therapy Reminder
 
-versionNumber=1.0.3
+versionNumber=1.1.0 (RC1)
 
 devName=MedupDev
 
