--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages.properties
@@ -19,4 +19,5 @@ orariAssunzioneLabel.text=Times of intake:
 oreLabel.text=hours
 dalleLabel.text=From:
 alleLabel.text=To:
+pazienteLabel.html=Patient:
 
