--- a/protoph/android/AndroidManifest.xml
+++ b/protoph/android/AndroidManifest.xml
@@ -32,4 +32,7 @@
     </activity>
   </application>
   
+  <uses-permission android:name="android.permission.NFC" />
+  <uses-feature android:name="android.hardware.nfc" android:required="false" />
+  
 </manifest>
