--- a/trunk/onscommons/pom.xml
+++ b/trunk/onscommons/pom.xml
@@ -49,6 +49,12 @@
     </dependency>
       
     <dependency>
+      <groupId>it.mate</groupId>
+      <artifactId>phgcommons</artifactId>
+      <version>1.0</version>
+    </dependency>
+    
+    <dependency>
       <groupId>com.googlecode.gwtphonegap</groupId>
       <artifactId>gwtphonegap</artifactId>
       <version>3.5.0.0</version>
