--- a/therapyreminder/gwt/pom.xml
+++ b/therapyreminder/gwt/pom.xml
@@ -35,6 +35,12 @@
     </dependency>
       
     <dependency>
+      <groupId>it.mate</groupId>
+      <artifactId>mgwcommons</artifactId>
+      <version>1.0</version>
+    </dependency>
+      
+    <dependency>
       <groupId>com.googlecode.gwtphonegap</groupId>
       <artifactId>gwtphonegap</artifactId>
       <version>2.0.0.0</version>
