--- a/protons/gwt/pom.xml
+++ b/protons/gwt/pom.xml
@@ -9,7 +9,7 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <webappDirectory>${project.build.directory}/${project.artifactId}</webappDirectory>
-    <gwt.version>2.5.1</gwt.version>
+    <gwt.version>2.6.1</gwt.version>
     <spring.version>3.1.2.RELEASE</spring.version>
   </properties>
 
@@ -22,6 +22,23 @@
 
   <dependencies>
       
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-servlet</artifactId>
+      <version>${gwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-user</artifactId>
+      <version>${gwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-dev</artifactId>
+      <version>${gwt.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    
     <dependency>
       <groupId>it.mate</groupId>
       <artifactId>gwtcommons</artifactId>
@@ -122,6 +139,19 @@
           <descriptors>
             <descriptor>src/main/assembly/clientcode.xml</descriptor>
           </descriptors>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.10</version>
+        <configuration>
+          <webAppSourceDirectory>${webappDirectory}</webAppSourceDirectory>
+          <webAppConfig>
+            <contextPath>/</contextPath>
+            <extraClasspath>${basedir}/target/classes/;${basedir}/../ext-conf/</extraClasspath>
+          </webAppConfig>
         </configuration>
       </plugin>
 
