--- a/copymob/android/AndroidManifest.xml
+++ b/copymob/android/AndroidManifest.xml
@@ -8,8 +8,12 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   
-  <uses-sdk android:minSdkVersion="13" android:targetSdkVersion="19" />
-  
+  <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="19" />
+
+  <!-- 
+      13/01/2015 - PROVATO ANCORA hwA a true, ma su HTC/And4.0.3 risulta ancora notevolmente meglio con hwa a false
+      android:hardwareAccelerated="true" 
+   -->
   <application 
       android:hardwareAccelerated="false" 
       android:icon="@drawable/icon" 
