--- a/copymob/android/AndroidManifest.xml
+++ b/copymob/android/AndroidManifest.xml
@@ -13,9 +13,12 @@
   <!-- 
       13/01/2015 - PROVATO ANCORA hwA a true, ma su HTC/And4.0.3 risulta ancora notevolmente meglio con hwa a false
       android:hardwareAccelerated="true" 
+      
+      14/01/2015 - PROVA SU And5 hA = true >> MEGLIO
+      
    -->
   <application 
-      android:hardwareAccelerated="false" 
+      android:hardwareAccelerated="true" 
       android:icon="@drawable/icon" 
       android:label="@string/app_name">
     <activity 
