--- a/trunk/onscommons/pom.xml
+++ b/trunk/onscommons/pom.xml
@@ -9,7 +9,7 @@
   <properties>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
-    <gwt.version>2.5.1</gwt.version>
+    <gwt.version>2.6.1</gwt.version>
     <gin.version>1.5.0</gin.version>
   </properties>
 
@@ -42,6 +42,17 @@
   
   <dependencies>
       
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-servlet</artifactId>
+      <version>${gwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-user</artifactId>
+      <version>${gwt.version}</version>
+    </dependency>
+    
     <dependency>
       <groupId>it.mate</groupId>
       <artifactId>gwtcommons</artifactId>
