--- a/trunk/copymob/server/src/main/resources/copymob.properties
+++ b/trunk/copymob/server/src/main/resources/copymob.properties
@@ -5,7 +5,7 @@ mail.sender.username=
 mail.sender.password=
 
 // UTENTE SENDER = noreply.copymob@gmail.com / apotequil
-mail.template.subject=Therapy Reminder
+mail.template.subject=CopyMob
 #mail.template.from=noreply.copymob@gmail.com
 mail.template.from=dev.medup@gmail.com
 mail.template.organizationEmailAddress=http://copymobsrv.appspot.com/
