--- a/copymob/server/.classpath
+++ b/copymob/server/.classpath
@@ -28,5 +28,5 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="target/copymob-server-0.1/WEB-INF/classes"/>
 </classpath>
