--- a/copymob/android/AndroidManifest.xml
+++ b/copymob/android/AndroidManifest.xml
@@ -37,6 +37,27 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
       
+      <!-- prova launcher from link, see:
+             http://stackoverflow.com/questions/2958701/launch-custom-android-application-from-android-browser
+             http://stackoverflow.com/questions/525063/android-respond-to-url-in-intent
+             http://stackoverflow.com/questions/2448213/how-to-implement-my-very-own-uri-scheme-on-android
+             
+           NON FUNZIONA 
+           
+      <intent-filter android:label="@string/launcher_name">
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http" android:host="copymobsrv.appspot.com" />
+      </intent-filter>
+
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="copymob" android:host="copymobsrv.appspot.com/launch" />
+      </intent-filter>
+       -->
       
     </activity>
     
@@ -57,6 +78,8 @@
     <meta-data android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version" />
     
+    <activity android:label="MultiImageChooser" android:name="com.synconset.MultiImageChooserActivity" android:theme="@android:style/Theme.Holo.Light" />
+   
   </application>
 
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
