--- a/trunk/gwtcommons/pom.xml
+++ b/trunk/gwtcommons/pom.xml
@@ -7,9 +7,15 @@
   <packaging>jar</packaging>
 
   <properties>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+    
+    <!-- 
     <gwt.version>2.5.1</gwt.version>
+    <gwt.version>2.6.1</gwt.version>
+     -->
+    <gwt.version>2.7.0</gwt.version>
+    
     <gin.version>1.5.0</gin.version>
     <gquery-dnd-bundle.version>1.0.6</gquery-dnd-bundle.version>
   </properties>
