--- a/copymob/server/pom.xml
+++ b/copymob/server/pom.xml
@@ -10,7 +10,12 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <webappDirectory>${project.build.directory}/${project.artifactId}-${project.version}</webappDirectory>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+    <!-- 
     <gwt.version>2.6.1</gwt.version>
+     -->
+    <gwt.version>2.7.0</gwt.version>
+    
     <appengine.target.version>1.9.15</appengine.target.version>
     <spring.version>3.2.4.RELEASE</spring.version>
     <log4j.version>1.2.14</log4j.version>
@@ -97,6 +102,10 @@
           <webappDirectory>${webappDirectory}</webappDirectory>
           <module>it.mate.copymob.admin</module>
           <extra>target/extra</extra>
+          <force>true</force>
+          <!-- 
+          <style>DETAILED</style>
+           -->
         </configuration>
       </plugin>
       
@@ -111,6 +120,10 @@
             <jvmFlag>-Xdebug</jvmFlag>
             <jvmFlag>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n</jvmFlag>
           </jvmFlags>
+          
+          <!-- 22/04/2015 GWT 2.7.0 UPGRADE -->
+          <enableJarSplitting>true</enableJarSplitting>
+          
         </configuration>
         <dependencies>
           <dependency>
