--- a/trunk/copymob/gwt/pom.xml
+++ b/trunk/copymob/gwt/pom.xml
@@ -9,7 +9,12 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <webappDirectory>${project.build.directory}/${project.artifactId}</webappDirectory>
+    
+    <!-- 
     <gwt.version>2.6.1</gwt.version>
+     -->
+    <gwt.version>2.7.0</gwt.version>
+    
     <spring.version>3.1.2.RELEASE</spring.version>
   </properties>
 
@@ -36,7 +41,7 @@
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-dev</artifactId>
       <version>${gwt.version}</version>
-      <scope>provided</scope>
+      <scope>test</scope>
     </dependency>
     
     <dependency>
@@ -136,7 +141,11 @@
 
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.5.3</version>
         <configuration>
+          <outputDirectory>${project.build.directory}/../../../</outputDirectory>
+          <finalName>copymob</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
           <descriptors>
             <descriptor>src/main/assembly/clientcode.xml</descriptor>
           </descriptors>
